--- a/Dust.ORM.UnitTest/Dust.ORM.CoreTest.csproj
+++ b/Dust.ORM.UnitTest/Dust.ORM.CoreTest.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -22,6 +22,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Dust.ORM.Core\Dust.ORM.Core.csproj" />
     <ProjectReference Include="..\Dust.ORM.Mysql\Dust.ORM.Mysql.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Core\" />
   </ItemGroup>
 
 </Project>
