--- a/Dust.ORM.MysqlTest/Dust.ORM.MysqlTest.csproj
+++ b/Dust.ORM.MysqlTest/Dust.ORM.MysqlTest.csproj
@@ -19,4 +19,10 @@
     <ProjectReference Include="..\Dust.ORM.Mysql\Dust.ORM.Mysql.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Dust.Utils.Core">
+      <HintPath>..\..\Dust.Utils\Dust.Utils.Core\bin\Debug\net5.0\Dust.Utils.Core.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
